# grpc-web-sandbox

client/: mkstub.sh  package.json
client/public/: mockServiceWorker.js
client/src/: App.tsx  main.tsx
client/src/mocks/: handlers.ts
client/stub/: echo_grpc_web_pb.d.ts  echo_grpc_web_pb.js  echo_pb.js  package.json
proto/: echo.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
