[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tonic-web = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
